--- a/Weather_dataset.ipynb
+++ b/Weather_dataset.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNHv6mPTT/VkvvJ0un+t7qT",
+      "authorship_tag": "ABX9TyNTHTNGI+ya2ZDuh+yupJ5I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,12 +44,12 @@
         "data.head()"
       ],
       "metadata": {
-        "id": "cWNy_6_ly1Xb",
-        "outputId": "131cd2df-331e-4e43-853d-f1026892d0b1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 347
-        }
+        },
+        "id": "cWNy_6_ly1Xb",
+        "outputId": "131cd2df-331e-4e43-853d-f1026892d0b1"
       },
       "execution_count": 3,
       "outputs": [
@@ -388,11 +388,11 @@
         "data.shape\n"
       ],
       "metadata": {
-        "id": "FQxIu4vQy9yX",
-        "outputId": "5e354ef0-0fc1-4f1d-a932-101fbfa81ab5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FQxIu4vQy9yX",
+        "outputId": "5e354ef0-0fc1-4f1d-a932-101fbfa81ab5"
       },
       "execution_count": 4,
       "outputs": [
@@ -414,11 +414,11 @@
         "data.index"
       ],
       "metadata": {
-        "id": "GZsd6sbhziBx",
-        "outputId": "ec7e87a7-7825-4daf-c7cf-78a103104b39",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "GZsd6sbhziBx",
+        "outputId": "ec7e87a7-7825-4daf-c7cf-78a103104b39"
       },
       "execution_count": 5,
       "outputs": [
@@ -440,11 +440,11 @@
         "data.columns"
       ],
       "metadata": {
-        "id": "5LLJzCGfznmI",
-        "outputId": "2e665e45-91fe-47fb-c39c-7bd0e43fa06c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5LLJzCGfznmI",
+        "outputId": "2e665e45-91fe-47fb-c39c-7bd0e43fa06c"
       },
       "execution_count": 6,
       "outputs": [
@@ -468,11 +468,11 @@
         "data.dtypes"
       ],
       "metadata": {
-        "id": "rLI1MTr4zsxz",
-        "outputId": "06d068eb-ba68-4ad9-8186-a373c3ee5e44",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rLI1MTr4zsxz",
+        "outputId": "06d068eb-ba68-4ad9-8186-a373c3ee5e44"
       },
       "execution_count": 7,
       "outputs": [
@@ -499,14 +499,15 @@
     {
       "cell_type": "code",
       "source": [
-        "data['Weather'].unique()"
+        "data['Weather'].unique()\n",
+        "#in a column, it shows  all the unique values used only in one column"
       ],
       "metadata": {
-        "id": "ODdfQqGXz8IQ",
-        "outputId": "c7321f07-f191-4ebc-da6f-9c9e72ee19e2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ODdfQqGXz8IQ",
+        "outputId": "c7321f07-f191-4ebc-da6f-9c9e72ee19e2"
       },
       "execution_count": 9,
       "outputs": [
@@ -540,9 +541,222 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#it shows the total number of unique values in each column, it used in single column/dataframe\n",
+        "data.nunique()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rhZAX2ou0jWf",
+        "outputId": "a4c15607-889b-414e-a01a-629705c6907f"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Date/Time           8784\n",
+              "Temp_C               533\n",
+              "Dew Point Temp_C     489\n",
+              "Rel Hum_%             83\n",
+              "Wind Speed_km/h       34\n",
+              "Visibility_km         24\n",
+              "Press_kPa            518\n",
+              "Weather               50\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "rhZAX2ou0jWf"
+        "id": "rQnq4TzJD3sX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **.count**\n",
+        "it shows the total number of non-null in each column\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Uach0kGEEEMt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data.count()"
+      ],
+      "metadata": {
+        "id": "GgpsaUyNEh-W",
+        "outputId": "32c2eec8-5e89-4bf0-d325-9a3fc2ee587d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Date/Time           8784\n",
+              "Temp_C              8784\n",
+              "Dew Point Temp_C    8784\n",
+              "Rel Hum_%           8784\n",
+              "Wind Speed_km/h     8784\n",
+              "Visibility_km       8784\n",
+              "Press_kPa           8784\n",
+              "Weather             8784\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **.values_counts**\n",
+        "in a column it shows all the unique values with thier count. it can be applied on a single column only"
+      ],
+      "metadata": {
+        "id": "N3Ae52-HE8Wn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data.Weather.value_counts()"
+      ],
+      "metadata": {
+        "id": "8ln5p1XSErBm",
+        "outputId": "4e7af3ce-cb45-4fc5-a204-01043d329b5d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Weather\n",
+              "Mainly Clear                               2106\n",
+              "Mostly Cloudy                              2069\n",
+              "Cloudy                                     1728\n",
+              "Clear                                      1326\n",
+              "Snow                                        390\n",
+              "Rain                                        306\n",
+              "Rain Showers                                188\n",
+              "Fog                                         150\n",
+              "Rain,Fog                                    116\n",
+              "Drizzle,Fog                                  80\n",
+              "Snow Showers                                 60\n",
+              "Drizzle                                      41\n",
+              "Snow,Fog                                     37\n",
+              "Snow,Blowing Snow                            19\n",
+              "Rain,Snow                                    18\n",
+              "Thunderstorms,Rain Showers                   16\n",
+              "Haze                                         16\n",
+              "Drizzle,Snow,Fog                             15\n",
+              "Freezing Rain                                14\n",
+              "Freezing Drizzle,Snow                        11\n",
+              "Freezing Drizzle                              7\n",
+              "Snow,Ice Pellets                              6\n",
+              "Freezing Drizzle,Fog                          6\n",
+              "Snow,Haze                                     5\n",
+              "Freezing Fog                                  4\n",
+              "Snow Showers,Fog                              4\n",
+              "Moderate Snow                                 4\n",
+              "Rain,Snow,Ice Pellets                         4\n",
+              "Freezing Rain,Fog                             4\n",
+              "Freezing Drizzle,Haze                         3\n",
+              "Rain,Haze                                     3\n",
+              "Thunderstorms,Rain                            3\n",
+              "Thunderstorms,Rain Showers,Fog                3\n",
+              "Freezing Rain,Haze                            2\n",
+              "Drizzle,Snow                                  2\n",
+              "Rain Showers,Snow Showers                     2\n",
+              "Thunderstorms                                 2\n",
+              "Moderate Snow,Blowing Snow                    2\n",
+              "Rain Showers,Fog                              1\n",
+              "Thunderstorms,Moderate Rain Showers,Fog       1\n",
+              "Snow Pellets                                  1\n",
+              "Rain,Snow,Fog                                 1\n",
+              "Moderate Rain,Fog                             1\n",
+              "Freezing Rain,Ice Pellets,Fog                 1\n",
+              "Drizzle,Ice Pellets,Fog                       1\n",
+              "Thunderstorms,Rain,Fog                        1\n",
+              "Rain,Ice Pellets                              1\n",
+              "Rain,Snow Grains                              1\n",
+              "Thunderstorms,Heavy Rain Showers              1\n",
+              "Freezing Rain,Snow Grains                     1\n",
+              "Name: count, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data.info()"
+      ],
+      "metadata": {
+        "id": "1eQc62wDFbs1",
+        "outputId": "ca78f785-f70d-42b5-dc7c-210f0d427b06",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 8784 entries, 0 to 8783\n",
+            "Data columns (total 8 columns):\n",
+            " #   Column            Non-Null Count  Dtype  \n",
+            "---  ------            --------------  -----  \n",
+            " 0   Date/Time         8784 non-null   object \n",
+            " 1   Temp_C            8784 non-null   float64\n",
+            " 2   Dew Point Temp_C  8784 non-null   float64\n",
+            " 3   Rel Hum_%         8784 non-null   int64  \n",
+            " 4   Wind Speed_km/h   8784 non-null   int64  \n",
+            " 5   Visibility_km     8784 non-null   float64\n",
+            " 6   Press_kPa         8784 non-null   float64\n",
+            " 7   Weather           8784 non-null   object \n",
+            "dtypes: float64(4), int64(2), object(2)\n",
+            "memory usage: 549.1+ KB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "wkcxdt6gGSp5"
       },
       "execution_count": null,
       "outputs": []
