--- a/stock analysis.ipynb
+++ b/stock analysis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPwVlofaApL6Wbcv8N8C1tV",
+      "authorship_tag": "ABX9TyPMJqyUXjG0/NjMQ9KCKHmN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1826,11 +1826,11 @@
         "print(sales_per_category)"
       ],
       "metadata": {
-        "id": "GKH77mLIUZoP",
-        "outputId": "11dbbec2-3a34-42c7-9dae-0482886fb216",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "GKH77mLIUZoP",
+        "outputId": "11dbbec2-3a34-42c7-9dae-0482886fb216"
       },
       "execution_count": 26,
       "outputs": [
@@ -1856,12 +1856,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "S0jx6sY8W1od",
-        "outputId": "7cf64edc-aea9-48f6-dafe-d8b297c09ad7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
-        }
+        },
+        "id": "S0jx6sY8W1od",
+        "outputId": "7cf64edc-aea9-48f6-dafe-d8b297c09ad7"
       },
       "execution_count": 31,
       "outputs": [
@@ -1892,12 +1892,12 @@
         "data.head(3)"
       ],
       "metadata": {
-        "id": "sFkEAupvbQtY",
-        "outputId": "139ea960-8f9f-4fd7-f831-3695030561af",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 389
-        }
+        },
+        "id": "sFkEAupvbQtY",
+        "outputId": "139ea960-8f9f-4fd7-f831-3695030561af"
       },
       "execution_count": 32,
       "outputs": [
@@ -2257,10 +2257,56 @@
     {
       "cell_type": "code",
       "source": [
-        "customer_order_freq=data.groupby(['Customer ID','Customer Name','Segment'])"
+        "customer_order_freq=data.groupby(['Customer ID','Customer Name','Segment'])['Order ID'].count().reset_index()\n",
+        "customer_order_freq.rename(columns={'Order ID': 'Total Orders'}, inplace=True)\n",
+        "repeat_costomers=customer_order_freq[customer_order_freq['Total Orders']>=1]\n",
+        "sorted_repeat_customers=repeat_costomers.sort_values(by=\"Total Orders\",ascending=False)\n",
+        "print(sorted_repeat_customers.head(10).reset_index(drop=True))"
       ],
       "metadata": {
-        "id": "W6-HNTdXZwbn"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W6-HNTdXZwbn",
+        "outputId": "edad5328-cdc2-44b8-d803-76ef24ff713e"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  Customer ID        Customer Name      Segment  Total Orders\n",
+            "0    WB-21850        William Brown     Consumer            35\n",
+            "1    PP-18955           Paul Prost  Home Office            34\n",
+            "2    MA-17560         Matt Abelman  Home Office            34\n",
+            "3    JL-15835             John Lee     Consumer            33\n",
+            "4    CK-12205  Chloris Kastensmidt     Consumer            32\n",
+            "5    SV-20365          Seth Vernon     Consumer            32\n",
+            "6    JD-15895     Jonathan Doherty    Corporate            32\n",
+            "7    AP-10915       Arthur Prichep     Consumer            31\n",
+            "8    ZC-21910     Zuschuss Carroll     Consumer            31\n",
+            "9    EP-13915           Emily Phan     Consumer            31\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Ranking Costomers according to sales**"
+      ],
+      "metadata": {
+        "id": "GgKtAl_Am4Hp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "customer_sales=data.groupby(['Customer ID','Customer Name','Segment'])['Sales'].sum().reset_index()"
+      ],
+      "metadata": {
+        "id": "fYnUOg6HiFbV"
       },
       "execution_count": null,
       "outputs": []
