--- a/Weather_dataset.ipynb
+++ b/Weather_dataset.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO6qWtB+UDUlf34jR2mXDJq",
+      "authorship_tag": "ABX9TyMiaAQlfj3nKPj9LwQ8rPKP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "ZgbcvGo9xHIP"
       },
       "outputs": [],
       "source": [
+        "#importing pandas library\n",
         "import pandas as pd\n"
       ]
     },
@@ -51,7 +52,7 @@
         "id": "cWNy_6_ly1Xb",
         "outputId": "6ca43b5d-c20e-4709-85b4-929a6a1d548f"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -394,7 +395,7 @@
         "id": "FQxIu4vQy9yX",
         "outputId": "f278e2b2-e64c-469a-d3e1-84967ebdd37d"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -420,7 +421,7 @@
         "id": "GZsd6sbhziBx",
         "outputId": "a9edc957-772f-43f4-a284-6f7e124d1eaa"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -446,7 +447,7 @@
         "id": "5LLJzCGfznmI",
         "outputId": "87980f7a-a9cc-438a-aec3-b06c9152c5dc"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -474,7 +475,7 @@
         "id": "rLI1MTr4zsxz",
         "outputId": "e514934c-4bea-4ca2-c907-78ca0d53fc57"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -509,7 +510,7 @@
         "id": "ODdfQqGXz8IQ",
         "outputId": "1a440fb2-e473-43b1-e56b-85f6fc91eb6f"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -552,7 +553,7 @@
         "id": "rhZAX2ou0jWf",
         "outputId": "ffa73d6c-d7d3-4d18-b93a-738b5c6f6fd2"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -580,7 +581,7 @@
       "metadata": {
         "id": "rQnq4TzJD3sX"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -606,7 +607,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -650,7 +651,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -727,7 +728,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -774,7 +775,7 @@
         },
         "outputId": "df7a2aa3-4bb3-4700-a87c-7b409c5e2559"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -938,7 +939,7 @@
         "id": "zy0crMwyHVBc",
         "outputId": "e2739a61-95e6-44e8-9613-03818d0b62ff"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -964,7 +965,7 @@
         "id": "pFdTnJYDHqYl",
         "outputId": "71923641-5dea-46b3-8672-85ce0827c7e6"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1001,7 +1002,7 @@
         "id": "LrWy_kkkIBQQ",
         "outputId": "b7da7c19-c0cf-4425-888b-bc0e4038fcca"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1305,7 +1306,7 @@
         "id": "oVMjY_9kIcnL",
         "outputId": "51e0584a-2316-43c3-8423-087480779f4f"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1384,7 +1385,7 @@
         "id": "ulGGLZXjIrA5",
         "outputId": "885d0f4d-b3a3-42ec-d6e6-90db0409e144"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1808,7 +1809,7 @@
         "id": "1ftLOpewJsh2",
         "outputId": "1c538967-3ac8-442a-ec5e-c8781d948602"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2241,7 +2242,7 @@
         "id": "hwjENJlbKQhs",
         "outputId": "00e83983-b5b3-4df1-8908-bdd365f30904"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2546,7 +2547,7 @@
         "id": "GkKMDt-WKtZb",
         "outputId": "a063204d-26f2-46c4-b3a1-fe1355b169c8"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2978,7 +2979,7 @@
         "id": "DMJ0xc6DLQhE",
         "outputId": "b68fb14f-b561-4124-a8cf-4039a87032ac"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3022,7 +3023,7 @@
         "id": "LEHX19bMLogx",
         "outputId": "4d9eb445-38e7-48a6-ca47-e2d912fec2e4"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3328,7 +3329,7 @@
           "height": 112
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3642,7 +3643,7 @@
           "height": 112
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3946,7 +3947,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3982,7 +3983,7 @@
           "height": 112
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4286,7 +4287,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4321,7 +4322,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4357,7 +4358,7 @@
           "height": 112
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4661,7 +4662,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4740,7 +4741,7 @@
         },
         "outputId": "0fa7df70-27d0-4fd2-adfe-33014fbc56d6"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5165,7 +5166,7 @@
         "id": "b25SBhmh4jKp",
         "outputId": "94fac1c3-2fbf-409b-98d0-34fdab9450fc"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5598,7 +5599,7 @@
         "id": "dczwayDJ5ULs",
         "outputId": "a8597efc-1f6e-4ab2-8a84-1e3ed62c55cf"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5903,7 +5904,7 @@
         "id": "TV7nWnjF6e40",
         "outputId": "b541c8c2-5076-432c-b362-45e60366c594"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6336,7 +6337,7 @@
         "id": "acUEAPVQ6qBJ",
         "outputId": "9ebdbb8f-0444-438b-b786-f435005591ec"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6641,7 +6642,7 @@
           "height": 859
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
