--- a/UEFA_Euro_2024.ipynb
+++ b/UEFA_Euro_2024.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNCgzOyjlhlWqycdJoaY5+H",
+      "authorship_tag": "ABX9TyNt9S4mN391ivPoAClzdsFs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "0h9TJkKQtj3r"
       },
@@ -54,7 +54,7 @@
         "id": "kSdCpqzWuQJ1",
         "outputId": "9892afa7-063a-4216-98aa-06b220015e59"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -494,7 +494,7 @@
         "id": "CtA-zk1Wufo7",
         "outputId": "8cbe3600-33f1-4125-d243-0c74cc3f6ec9"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -945,7 +945,7 @@
         "id": "bVxzRBBFA-bQ",
         "outputId": "e5442f10-2247-416a-e2b3-8a8f7c100003"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -972,7 +972,7 @@
         "id": "Uq_k6nnwBITH",
         "outputId": "1af857fd-f4e8-4d1a-9e2a-a723a06940ce"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1512,7 +1512,7 @@
         "id": "ABGfbs1CB_hR",
         "outputId": "1e031b5c-7d41-4107-d121-fb612c127912"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1587,7 +1587,7 @@
         "id": "pS4-zMcnCFVa",
         "outputId": "ff2ea396-28ff-4873-df4e-1cbba6ac879b"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1659,7 +1659,7 @@
         "id": "qo-bcx7aCOMk",
         "outputId": "82f11a19-d71d-48e6-b0b3-07135a3cf325"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1685,7 +1685,7 @@
         "id": "c-6YKbc4CWJv",
         "outputId": "f9f8166a-f2b5-457d-f498-515c18ee7033"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1724,7 +1724,7 @@
           "height": 213
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2087,7 +2087,7 @@
         "id": "JVaz-ITnBQsb",
         "outputId": "aafa800c-d30e-4031-99ae-910054815872"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2105,10 +2105,87 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Audience Analysis:\n",
+        "Audience Attendance: Calculate the average audience attendance per match or stadium."
+      ],
+      "metadata": {
+        "id": "sqIr0IRragRN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Convert the 'audience' column to numeric type by removing commas and casting to integer\n",
+        "\n",
+        "if matches['audience'].dtype == object:\n",
+        "    matches['audience'] = matches['audience'].str.replace(',', '').astype(int)\n",
+        "avg_audience_per_match = matches['audience'].mean()\n",
+        "print(avg_audience_per_match)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "ujqddVB9B0Al",
+        "outputId": "17d47943-090b-48cb-d87e-8aa89477878a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "52574.27450980392\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "avg_audience_per_stadium =matches.groupby('stadium')['audience'].mean()\n",
+        "avg_audience_per_stadium"
+      ],
+      "metadata": {
+        "id": "0-94gJIGbmg1",
+        "outputId": "3281338d-01bc-4f4e-913e-4074e184865d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "stadium\n",
+              "Arena AufSchalke         48835.250000\n",
+              "BVB Stadion Dortmund     60492.000000\n",
+              "Cologne Stadium          42138.200000\n",
+              "Dsseldorf Arena          46127.600000\n",
+              "Frankfurt Arena          45930.400000\n",
+              "Fuball Arena Mnchen      63502.166667\n",
+              "Leipzig Stadium          38394.750000\n",
+              "Olympiastadion Berlin    68420.833333\n",
+              "Stuttgart Arena          54000.000000\n",
+              "Volksparkstadion         47379.400000\n",
+              "Name: audience, dtype: float64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "ujqddVB9B0Al"
+        "id": "WjDlp8KbbsxP"
       },
       "execution_count": null,
       "outputs": []
